fixed issue with scroll bar alignment

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -11,11 +11,15 @@
   margin-left: 2.5rem;
 }
 
+.movie-list-scrollbar {
+  margin-left: 2.5rem;
+}
+
 .movie-list {
   /* max-width: 1480px; */
   /* height: 100rem; */
   display: inline-flex;
-  margin-left: 2.5rem;
+  margin-left: -2.5rem;
   margin-top: 1.5rem;
   height: 10rem;
 }
